# DraftBotOptimization

./: .gitmodules  CMakeLists.txt  draftbot_optimization.cpp  draftbot_optimization.cu  draftbot_optimization.h  parse_json.cpp  test.cpp
algorithms/: cma_es.cpp  cross_entropy_method.cpp  differential_evolution.cpp  genetic.cpp
algorithms/shared/: matrix_types.h  parameters.h  util.cpp  util.h
cmake/: ComputeCppCompilerChecks.cmake  FindComputeCpp.cmake
futhark/: draftbot_optimization.fut
